# Lab2CD-CI_23

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: filter.cpp  filter.h  main.cpp
test/: test_filter.cpp
